--- a/new.html
+++ b/new.html
@@ -297,8 +297,8 @@
         },
         "priceRange": "$$",
         "sameAs": [
-            "https://adlban.com",
-            "https://adlbin.ir"
+            "https://dadgan.com",
+            "https://dadpors.com"
         ]
     }
     </script>
@@ -431,14 +431,14 @@
                 <div class="flex justify-between items-center text-sm">
                     <!-- Quick Links -->
                     <nav class="hidden md:flex items-center gap-6" aria-label="پیوندهای سریع">
-                        <a href="https://adlban.com" 
+                        <a href="https://dadgan.com" 
                            class="flex items-center gap-1 hover:text-primary-200 transition-colors"
                            target="_blank"
                            rel="noopener noreferrer">
                             <i class="fas fa-external-link-alt text-xs" aria-hidden="true"></i>
                             <span>عدل‌بان</span>
                         </a>
-                        <a href="http://adlbin.ir/" 
+                        <a href="https://dadpors.com" 
                            class="flex items-center gap-1 hover:text-primary-200 transition-colors"
                            target="_blank"
                            rel="noopener noreferrer">
